--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mfelibs/vue-plugin-exposure",
-  "version": "1.0.2",
+  "name": "vue-plugin-exposure",
+  "version": "1.0.0",
   "description": "vue插件 曝光组件 使用intersection-observer",
   "main": "lib/index.cjs.js",
   "module": "src/index.js",
@@ -22,7 +22,7 @@
     "npm": ">= 3.0.0"
   },
   "license": "MIT",
-  "author": "FengZihao <zihao5@staff.sina.com.cn>",
+  "author": "NowhereToRun <452242153@qq.com>",
   "repository": "ssh://git@gitlab.weibo.cn:2222/SINA_MFE_COMPONENTS/vue-plugin-exposure.git",
   "dependencies": {
     "intersection-observer": "^0.5.1"
